functionally completed for the e-commerce component

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
     <!-- google font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- google fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans+Condensed:300" rel="stylesheet">
-    <title>Bakery Shop</title>
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Baloo+Bhaina|Cinzel+Decorative|Happy+Monkey|Josefin+Slab|Kodchasan|Neucha|Open+Sans+Condensed:300|Pompiere" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
